--- a/datajournalism/pt/index.html
+++ b/datajournalism/pt/index.html
@@ -48,7 +48,7 @@
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact">
   <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden" style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    max-width: 100%;
+    max-width: 100%; position: fixed; top: 0; z-index: 100;
 ">
     <span class="flex items-center">
       <a href="https://trendydots.com" class="block text-left" target="_blank">
@@ -78,7 +78,7 @@
     </ul>
   </nav>
 
-  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center" style="margin-top: 80px">
     <div class="w-full lg:w-1/2">
       <img src="./assets/img/undraw_report.svg" alt="">
     </div>
