--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -130,7 +130,7 @@
     </p>
     <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
         6.4 Customer Service and Product Support <br/>
-        For customer service related to your Premium Service subscription (product, technical or subscription questions), please contact Trendy Dots by sending an email to support.trendydots[at]gmail.com.
+        For customer service related to your Premium Service subscription (product, technical or subscription questions), please contact Trendy Dots by sending an email to suport.trendydots[at]gmail.com.
     </p>
 
     <h3 class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
