--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -82,8 +82,10 @@
     </h3>
     <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
         5.1 All copyright and other intellectual property rights in any material (including, without limitation, text, photographs and other images and sound) contained in the Site is either owned by us or our third party content providers. You are only allowed to use the Site and the material contained in the Site as set out in these terms and conditions.
-       <br/>
+        <br/>
         5.2 The Site contains certain trade marks, All trademarks included on the Site are the property of Trendy Dots, or its content providers. You are not allowed to copy or otherwise use any of these trademarks in any way except as set out in these terms and conditions.
+        <br/>
+        5.3 As a reserch organisation, Trendy Dots benefits from a copyright exception throught the EU Copyright Directive to carry out text and data mining on large sets of data, provided by third parties and reacheable on the Site.
     </p>
     <h3 class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
         6. Premium Services
