--- a/datajournalism/subscriber-thanks.html
+++ b/datajournalism/subscriber-thanks.html
@@ -113,7 +113,9 @@
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Getting started</label>
       <h1 class="my-4 font-normal">Making a new report</h1>
-      <p class="leading-normal mb-4 text-grey-dark">A report allows you input up to 5 keywords. Keywords are semantically annotated and the platform performs several queries to retrieve several publically available data sets.</p>
+      <p class="leading-normal mb-4 text-grey-dark">
+          A report allows you to input up to 5 keywords. Keywords are semantically annotated and the platform performs queries to retrieve several publicly available data sets for each keyword.
+      </p>
     </div>
   </section>
   
@@ -121,7 +123,9 @@
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Finetuning your report</label>
       <h1 class="my-4 font-normal">View. Deduce. Take conclusions</h1>
-      <p class="leading-normal mb-4 text-grey-dark">There are several available applications integrated in the platform which allows you see data related you your keywords. On the right hand side, there are finetuning fields which allow you to experiment with headliens, note conclusions, or save a time interval for which will be read by some applications.</p>
+      <p class="leading-normal mb-4 text-grey-dark">
+          There are several applications integrated in the platform which allow you see data related to your keywords. On the right hand side, there are fine-tuning fields which allow you to experiment with headlines, note conclusions, or save a default time interval for which will be read by the applications next time you explore the report.
+      </p>
     </div>
     <div class="w-full lg:w-1/2">
       <div style="padding:58% 0 0 0;position:relative;">
