--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -147,6 +147,13 @@
       <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf"
         enctype="multipart/form-data" method="POST">
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
+            <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="firstname" name="firstname" type="text"
+              required style="height: 5em;">
+            <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="firstname" style="color: black;">
+              Your first name
+            </label>
+          </div>
+        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
           <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="email" name="email" type="email"
             required style="height: 5em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email" style="color: black;">
