--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     <div class="gwd-div-25b1" id="footer">
         <p class="gwd-p-g9j6">
             <strong class="">
-                <span class="gwd-span-qcoj">©</span> copyright&nbsp; </strong>
+                <span class="gwd-span-qcoj">© 2019</span> &nbsp; </strong>
             <strong class="">trendydots.com</strong>
         </p>
         <p class="gwd-p-1glz">image credit:
