--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -162,10 +162,10 @@
         </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
           <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="affiliation" name="affiliation"
-            type="text" style="height: 5em;">
+            type="text" required style="height: 5em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="affiliation"
             style="color: black;">
-            Your affiliation (optional)
+            Your affiliation
           </label>
         </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
@@ -173,7 +173,7 @@
             type="text" style="height: 6em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
             style="color: black;">
-            How are you related to the data journalism field?
+            How are you related to the journalism field?
           </label>
         </div>
 
