--- a/datajournalism/pt/index.html
+++ b/datajournalism/pt/index.html
@@ -148,10 +148,10 @@
         </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
           <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="affiliation" name="affiliation"
-            type="text" style="height: 5em;">
+            type="text" required style="height: 5em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="affiliation"
             style="color: black;">
-            Sua afiliação (opcional)
+            Sua afiliação
           </label>
         </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
@@ -159,7 +159,7 @@
             type="text" style="height: 6em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
             style="color: black;">
-            Como você está relacionado ao campo de jornalismo de dados?
+            Como você está relacionado ao campo de jornalismo?
           </label>
         </div>
 
