added privacy statement link

--- a/datajournalism/getting-started.html
+++ b/datajournalism/getting-started.html
@@ -148,7 +148,10 @@
       </div>
     </div>
     <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 trendydots.com All
-      rights reserved.</div>
+      rights reserved. &nbsp;
+      <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+      &nbsp;
+      <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a></div></div>
   </footer>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
