--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -184,6 +184,9 @@
           <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit" style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
             Subscribe
           </button>
+          <span style="font-size:12px">
+              by submitting this information you agree to our <a href="../privacy-statement.html" target="_blank" style="color:#000">privacy statement</a>
+              </span>
         </div>
       </form>
       <!--
@@ -228,7 +231,11 @@
       </div>
     </div>
     <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 trendydots.com All
-      rights reserved.</div>
+      rights reserved. 
+      &nbsp;
+      <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+      &nbsp;
+      <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a></div>
   </footer>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
