--- a/datajournalism/pt/index.html
+++ b/datajournalism/pt/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
-  <link rel="stylesheet" type="text/css"  href="./assets/css/stitches.css">
-    <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
-  <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp
-    crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="./assets/css/stitches.css">
+  <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
+  <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css
+    integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp crossorigin="anonymous">
   <title>trendy dots - data journalism platform</title>
   <link rel="shortcut icon" type="image/png" href="./assets/img/logo.png" />
   <style>
@@ -62,10 +62,12 @@
     <ul class="text-sm text-grey-dark list-reset flex items-center">
 
       <li>
-        <a href="../" target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">EN</a>
+        <a href="../" target="_self"
+          class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">EN</a>
       </li>
       <li>
-        <a target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline" style="color:grey">PT</a>
+        <a target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline"
+          style="color:grey">PT</a>
       </li>
       <!-- 
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
@@ -78,7 +80,9 @@
     </ul>
   </nav>
 
-  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center" style="margin-top: 80px">
+  <section
+    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center"
+    style="margin-top: 80px">
     <div class="w-full lg:w-1/2">
       <img src="./assets/img/undraw_report.svg" alt="">
     </div>
@@ -92,7 +96,8 @@
     </div>
   </section>
 
-  <section class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
+  <section
+    class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">
         Bloco de notas com idéias para experimentar títulos e para planear o seu artigo
@@ -112,7 +117,8 @@
     </div>
   </section>
 
-  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+  <section
+    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2">
       <img src="./assets/img/undraw_in_sync.svg" alt="">
     </div>
@@ -137,12 +143,13 @@
         terá a oportunidade de ser selecionado para a sessão de testes beta. </p>
 
       <!-- New form -->
-      <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf"
-        enctype="multipart/form-data" method="POST">
+      <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8"
+        action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST">
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
           <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="email" name="email" type="email"
             required style="height: 5em;">
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email" style="color: black;">
+          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email"
+            style="color: black;">
             Seu email
           </label>
         </div>
@@ -155,8 +162,8 @@
           </label>
         </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="fieldRelation" name="fieldRelation"
-            type="text" style="height: 6em;">
+          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="fieldRelation"
+            name="fieldRelation" type="text" style="height: 6em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
             style="color: black;">
             Como você está relacionado ao campo de jornalismo?
@@ -168,9 +175,13 @@
         <br />
         <div class="flex items-center justify-between">
           <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit"
-          style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
+            style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
             Inscreva-se
           </button>
+          <span style="font-size:12px">
+            ao enviar esta informação, você concorda com a nossa <a href="../../privacy-statement.html" target="_blank"
+              style="color:#000">declaração de privacidade</a>
+          </span>
         </div>
       </form>
 
@@ -190,7 +201,8 @@
   </section>
 
   <footer class="font-sans bg-white py-8 px-4">
-    <div class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
+    <div
+      class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
       <a href="" class="block mr-4 w-full md:w-1/4" target="_blank">
         <img src="./assets/img/logo.png" class="w-24 -ml-8 md:ml-0" alt="logo">
       </a>
@@ -207,14 +219,19 @@
         <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
         <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
        -->
-          <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank" href="https://twitter.com/trendydots">
+          <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank"
+            href="https://twitter.com/trendydots">
             <i class="fab fa-twitter"></i>
           </a>
         </div>
       </div>
     </div>
     <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 trendydots.com All
-      rights reserved.</div>
+      rights reserved. &nbsp;
+      <a href="../../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+      &nbsp;
+      <a href="../../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a>
+    </div>
   </footer>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
