--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
             <p class="gwd-p-exsd">Meaningful association of data trends</p>
         </div>
     </div>
-    <div class="gwd-div-mx5a gwd-div-s0or" id="page3Text">
-        <div class="gwd-div-9729">
+    <div class="gwd-div-mx5a gwd-div-s0or" id="page3Text" style="height: 500px;">
+        <div class="gwd-div-9729" style="top:0">
             <p class="gwd-p-6mvh">contact us</p>
             <p class="gwd-p-1em6">Want to be one of our happy clients?</p>
             <!-- contact form -->
@@ -503,7 +503,11 @@
                 <br>
 
                 <div class="form-group">
-                    <button type="submit" value="submit" style="font-weight: 800;color: #FBB82B;">Send Message</button>
+                    <button type="submit" value="submit" style="font-weight: 800;color: #FBB82B; border: 1px solid #FBB82B; padding: 7px">Send Message</button>
+                    <br/> <br/>
+                    <span style="font-size:12px">
+                    by submitting this information you agree to our <a href="./privacy-statement.html" target="_blank" style="color:#000">privacy statement</a>
+                    </span>
                 </div>
             </form>
             <!-- /contact form -->
@@ -514,6 +518,10 @@
             <strong class="">
                 <span class="gwd-span-qcoj">© 2019</span> &nbsp; </strong>
             <strong class="">trendydots.com</strong>
+            &nbsp; &nbsp;
+            <a href="./privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+            &nbsp;
+            <a href="./terms-of-service.html" target="_blank" style="color:#000">Terms of service</a>
         </p>
         <p class="gwd-p-1glz">image credit:
             <a href="https://dribbble.com/Octopus" target="_blank" style="color:#000">Octopus</a>
