--- a/invest/index.html
+++ b/invest/index.html
@@ -111,6 +111,10 @@
           <button type="submit" style="min-height: 30px;" class="uppercase text-sm text-white focus:outline-0 w-full sm:w-auto bg-black hover:bg-grey-darkest focus:bg-grey-light tracking-wide px-6">Subscribe</button>
         </form>
       </div>
+      <br/>
+      <span style="font-size:12px">
+          by submitting this information you agree to our <a href="../privacy-statement.html" target="_blank" style="color:#000">privacy statement</a>
+          </span>
     </div>
   </section>
   <footer class="font-sans bg-white py-8 px-4">
@@ -137,7 +141,12 @@
         </div>
       </div>
     </div>
-    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 trendydots.com All rights reserved.</div>
+    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 trendydots.com All rights reserved. 
+        &nbsp;
+        <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+        &nbsp;
+        <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a>
+    </div>
   </footer>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
