--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -191,7 +191,7 @@
         11. Enquiries or complaints
     </h3>
     <p class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
-      If you have any enquiries or complaints about the Site then please address them (within 30 (thirty) days of such enquiry or complaint first arising) to: business.trendydots[at]gmail.com
+      If you have any enquiries or complaints about the Site then please address them (within 30 (thirty) days of such enquiry or complaint first arising) to: support.trendydots[at]gmail.com
     </p>
     <h3 class="mt-1 lg:mt-4 max-w-lg m-auto leading-loose mb-6 text-left">
         12. General and governing law
