--- a/datajournalism/subscriber-thanks.html
+++ b/datajournalism/subscriber-thanks.html
@@ -8,8 +8,8 @@
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
   <link rel="stylesheet" type="text/css" href="./assets/css/stitches.css">
   <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
-  <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.6.3/css/all.css integrity=sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/
-    crossorigin="anonymous">
+  <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.6.3/css/all.css
+    integrity=sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/ crossorigin="anonymous">
 
   <title>trendy dots - data journalism platform</title>
   <link rel="shortcut icon" type="image/png" href="./assets/img/logo.png" />
@@ -44,8 +44,9 @@
 </head>
 
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact" style="background: #f5f5f5">
-  
-  <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden" style="box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); max-width: 100%; position: fixed; top: 0; z-index: 100; ">
+
+  <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden"
+    style="box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); max-width: 100%; position: fixed; top: 0; z-index: 100; ">
     <span class="flex items-center">
       <a href="https://trendydots.com" class="block text-left" target="_blank">
         <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo">
@@ -72,7 +73,8 @@
   </nav>
 
 
-  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col md:flex-row sm:items-center" style="margin-top: 80px">
+  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col md:flex-row sm:items-center"
+    style="margin-top: 80px">
     <div class="w-full md:w-1/2 flex flex-col justify-center items-start px-6 py-0 md:py-8 md:px-8 lg:items-start">
       <!--
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">various aspects</label>
@@ -80,63 +82,83 @@
       -->
       <h1 class="mt-2 mb-4 font-medium">Thank you for subscribing to the trendy dots - data journalism platform β</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-      Your subscrition is being processed. You will receive an email with the outcome.
+        Your subscrition is being processed. You will receive an email with the outcome.
       </p>
     </div>
-    <div class="w-full lg:w-1/2 flex flex-col justify-between md:justify-center items-center p-2 md:p-8 items-center md:items-start">
-      <div class="flex items-center sm:border-b md:border-b md:border-r-0 p-4 lg:w-full md:w-full sm:w-full sm:display-none">
+    <div
+      class="w-full lg:w-1/2 flex flex-col justify-between md:justify-center items-center p-2 md:p-8 items-center md:items-start">
+      <div
+        class="flex items-center sm:border-b md:border-b md:border-r-0 p-4 lg:w-full md:w-full sm:w-full sm:display-none">
         <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt="data trends"></div>
         <div class="">
           <h2 class="text-black font-medium">See the latest trends for your keywords to start your article</h2>
-          <p class="text-grey-dark leading-normal"> <br>When you are starting your article, data trends are essential. You will get the latest internet search trends, geographical distribution of internet searches and latest news about the subject that interests you.</p>
+          <p class="text-grey-dark leading-normal"> <br>When you are starting your article, data trends are essential.
+            You will get the latest internet search trends, geographical distribution of internet searches and latest
+            news about the subject that interests you.</p>
         </div>
       </div>
       <div class="flex items-center p-4 lg:w-full md:w-full sm:w-full">
         <div class="w-14 h-14 rounded-full mr-4 bg-grey-light" alt="Avatar of Jonathan Reinink"></div>
         <div class="">
           <h2 class="text-black font-medium">Experiment with headlines and plan your article</h2>
-          <p class="text-grey-dark leading-normal"><br>Fast and reliable, the trendy dots data journalism platform compiles headlines from the most read media outlets in the world and categorizes them according to your settings. You can experiment with writing your own headlines, statements and plan your publication structure alongside this data.</p>
+          <p class="text-grey-dark leading-normal"><br>Fast and reliable, the trendy dots data journalism platform
+            compiles headlines from the most read media outlets in the world and categorizes them according to your
+            settings. You can experiment with writing your own headlines, statements and plan your publication structure
+            alongside this data.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+  <section
+    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2">
-    <!-- Vime video integration -->
-    <!--
+      <!-- Vime video integration -->
+      <!--
       <iframe style="width: 100%; height: 100%; min-height: 320px" src="https://player.vimeo.com/video/297751184" frameborder="0" allowFullScreen mozallowfullscreen webkitAllowFullScreen></iframe>
     -->
-    <div style="padding:58% 0 0 0;position:relative;">
-      <iframe src="https://player.vimeo.com/video/320492602?color=ffffff" style="position:absolute;top:0;left:0;width:100%;height:100%; box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      <div style="padding:58% 0 0 0;position:relative;">
+        <iframe src="https://player.vimeo.com/video/320492602?color=ffffff"
+          style="position:absolute;top:0;left:0;width:100%;height:100%; box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);"
+          frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+      <script src="https://player.vimeo.com/api/player.js"></script>
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Getting started</label>
       <h1 class="my-4 font-normal">Making a new report</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-          A report allows you to input up to 5 keywords. Keywords are semantically annotated and the platform performs queries to retrieve several publicly available data sets for each keyword.
+        A report allows you to input up to 5 keywords. Keywords are semantically annotated and the platform performs
+        queries to retrieve several publicly available data sets for each keyword.
       </p>
     </div>
   </section>
-  
-  <section class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row  text-center lg:text-left sm:items-center">
+
+  <section
+    class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row  text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">Finetuning your report</label>
       <h1 class="my-4 font-normal">View. Deduce. Take conclusions</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-          There are several applications integrated in the platform which allow you see data related to your keywords. On the right hand side, there are fine-tuning fields which allow you to experiment with headlines, note conclusions, or save a default time interval for which will be read by the applications next time you explore the report.
+        There are several applications integrated in the platform which allow you see data related to your keywords. On
+        the right hand side, there are fine-tuning fields which allow you to experiment with headlines, note
+        conclusions, or save a default time interval for which will be read by the applications next time you explore
+        the report.
       </p>
     </div>
     <div class="w-full lg:w-1/2">
       <div style="padding:58% 0 0 0;position:relative;">
-        <iframe src="https://player.vimeo.com/video/320491316?color=ffffff" style="position:absolute;top:0;left:0;width:100%;height:100%; box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-      </div>
+        <iframe src="https://player.vimeo.com/video/320491316?color=ffffff"
+          style="position:absolute;top:0;left:0;width:100%;height:100%; box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);"
+          frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+      <script src="https://player.vimeo.com/api/player.js"></script>
+    </div>
     </div>
   </section>
 
 
   <footer class="font-sans bg-white py-8 px-4">
-    <div class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
+    <div
+      class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
       <a href="" class="block mr-4 w-full md:w-1/4" target="_blank">
         <img src="./assets/img/logo.png" class="w-24 -ml-8 md:ml-0" alt="logo">
       </a>
@@ -151,15 +173,21 @@
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
         <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">Follow Us</h4>
         <div class="flex pl-0 md:pl-4 justify-start">
-          <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank" href="https://twitter.com/trendydots">
+          <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank"
+            href="https://twitter.com/trendydots">
             <i class="fab fa-twitter"></i>
           </a>
         </div>
       </div>
     </div>
     <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 trendydots.com All
-      rights reserved.</div>
+      rights reserved. &nbsp;
+      <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+      &nbsp;
+      <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a>
+    </div>
   </footer>
+ 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
