--- a/ceo/index.html
+++ b/ceo/index.html
@@ -119,9 +119,10 @@
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
                         <h2 class="title">Who am I?</h2>
-                        <h5 class="description" style="color:black">I consider myself a non conventional researcher. I have a great interest in web development, web
-                            design and pretty much everything web related. Lately I'm extending my knowldge in machine learning
-                            and artificial inteligence. So I do all sorts of experiments and initiatives in this direction.</h5>
+                        <h5 class="description" style="color:black">I consider myself a non conventional researcher. I have a great interest in web development, web design
+                            and pretty much everything web related. Lately I'm extending my knowledge in machine learning and
+                            artificial intelligence. So I do all sorts of experiments and initiatives in this direction.
+                            </h5>
                     </div>
                 </div>
                 <div class="separator separator-primary"></div>
