--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -11,6 +11,8 @@
     crossorigin="anonymous">
   <title>trendy dots - data journalism platform</title>
   <link rel="shortcut icon" type="image/png" href="./assets/img/logo.png" />
+  <link rel="stylesheet" href="./assets/css/aos.css" />
+
   <style>
     *:focus {
       outline: none;
@@ -33,18 +35,6 @@
       }
     }
   </style>
-
-  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
-  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <!--
-  <script>
-    function onSubmit(token) {
-      document.getElementById("invisible-recaptcha-form").submit();
-    }
-  </script>
--->
 
 </head>
 
@@ -85,7 +75,7 @@
   </nav>
 
   <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center" style="margin-top: 80px">
-    <div class="w-full lg:w-1/2">
+    <div class="w-full lg:w-1/2" data-aos="fade-up">
       <img src="./assets/img/undraw_report.svg" alt="">
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
@@ -113,13 +103,13 @@
         structure alongside this data.
       </p>
     </div>
-    <div class="w-full lg:w-1/2">
+    <div class="w-full lg:w-1/2" data-aos="fade-up">
       <img src="./assets/img/undraw_organize_resume.svg" alt="">
     </div>
   </section>
 
   <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2">
+    <div class="w-full lg:w-1/2" data-aos="fade-up">
       <img src="./assets/img/undraw_in_sync.svg" alt="">
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
@@ -237,6 +227,16 @@
       &nbsp;
       <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a></div>
   </footer>
+
+
+  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
+  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="./assets/js/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
