--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -201,7 +201,7 @@
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
         <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
-        <p>Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old
+        <p>Trendy Dots is an ambitious project making trend and exploratory data analysis on the new and old
           markets. We
           model the internet behaviour and forecast the evolution of markets, products, companies, etc. using
           innovative
