--- a/datajournalism/pt/index.html
+++ b/datajournalism/pt/index.html
@@ -208,7 +208,7 @@
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
         <h4 class="py-2 uppercase font-bold tracking-wide">Sobre nós</h4>
-        <p>Trendy Dots é um pequeno laboratório digital que efetua análise exploratória de dados e de tendências sobre
+        <p>Trendy Dots é um projeto ambicioso que efetua análise exploratória de dados e de tendências sobre
           novos e antigos mercados. Modelamos o comportamento da Internet e prevemos a evolução de mercados, produtos,
           empresas, etc., usando algoritmos de IA inovadores.</p>
       </div>
