--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -74,7 +74,11 @@
     </ul>
   </nav>
 
-  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center" style="margin-top: 80px">
+  <section class="font-sans container m-auto text-center py-8" style="margin-top: 64px">
+    <h1 class="mt-2 mb-4 font-medium ">Computer asisted story discovery</h1>
+  </section>
+
+  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center" style="margin-top: 20px">
     <div class="w-full lg:w-1/2" data-aos="fade-up">
       <img src="./assets/img/undraw_report.svg" alt="">
     </div>
