--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -75,7 +75,7 @@
   </nav>
 
   <section class="font-sans container m-auto text-center py-8" style="margin-top: 64px">
-    <h1 class="mt-2 mb-4 font-medium ">Computer asisted story discovery</h1>
+    <h1 class="mt-2 mb-4 font-medium ">Computer assisted story discovery</h1>
   </section>
 
   <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center" style="margin-top: 20px">
