--- a/datajournalism/pt/index.html
+++ b/datajournalism/pt/index.html
@@ -80,9 +80,14 @@
     </ul>
   </nav>
 
+
+  <section class="font-sans container m-auto text-center py-8" style="margin-top: 64px">
+    <h1 class="mt-2 mb-4 font-medium ">Computer assisted story discovery</h1>
+  </section>
+
   <section
     class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center"
-    style="margin-top: 80px">
+    style="margin-top: 20px">
     <div class="w-full lg:w-1/2">
       <img src="./assets/img/undraw_report.svg" alt="">
     </div>
