--- a/project.html
+++ b/project.html
@@ -404,8 +404,8 @@
         <div class="gwd-div-9729 gwd-div-1521">
             <p class="gwd-p-6mvh">our story</p>
             <p class="gwd-p-1em6">
-                Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old
-                markets. We model the
+                Trendy Dots is an ambitious project making trend and exploratory data analysis on the new and old
+                markets. We aim to model the
                 internet behaviour and forecast the evolution of markets, products, companies, etc. using innovative AI
                 algorithms.
                 <br>
@@ -479,7 +479,7 @@
     <div class="gwd-div-mx5a gwd-div-s0or" id="page3Text" style="height: 500px;">
         <div class="gwd-div-9729" style="top:0">
             <p class="gwd-p-6mvh">contact us</p>
-            <p class="gwd-p-1em6">Want to be one of our happy clients?</p>
+            
             <!-- contact form -->
             <form id="signupform" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST"
                 class="gwd-form-11dq">
