--- a/datajournalism/project.html
+++ b/datajournalism/project.html
@@ -7,10 +7,12 @@
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
   <link rel="stylesheet" type="text/css" href="./assets/css/stitches.css">
   <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
-  <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css
-    integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp crossorigin="anonymous">
+  <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp
+    crossorigin="anonymous">
   <title>trendy dots - data journalism platform</title>
   <link rel="shortcut icon" type="image/png" href="./assets/img/logo.png" />
+  <link rel="stylesheet" href="./assets/css/aos.css" />
+
   <style>
     *:focus {
       outline: none;
@@ -34,24 +36,15 @@
     }
   </style>
 
-  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
-  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <script>
-    function onSubmit(token) {
-      document.getElementById("invisible-recaptcha-form").submit();
-    }
-  </script>
 </head>
 
 <body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact">
   <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden" style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    max-width: 100%; position: fixed; top: 0; z-index: 100;
+    max-width: 100%; position: fixed; top: 0; z-index: 100; 
 ">
     <span class="flex items-center">
-      <a href="https://trendydots.com" class="block text-left" target="_blank">
+      <a href="" class="block text-left" target="_blank">
         <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo">
       </a>
       &nbsp;
@@ -60,16 +53,17 @@
       </b>
     </span>
     <ul class="text-sm text-grey-dark list-reset flex items-center">
-
       <li>
-        <a href="../" target="_self"
-          class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">EN</a>
+        <a target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline" style="color:grey">EN</a>
       </li>
       <li>
-        <a target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline"
-          style="color:grey">PT</a>
+        <a href="./pt/project.html" target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">PT</a>
       </li>
       <!-- 
+      <li>
+        <a href="https://trendydots.com" target="_blank" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Main Page</a>
+      </li>
+     
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
     <li class="pr-2"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">FAQs</a></li>
     <li class="pl-2 border-l"><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
@@ -80,59 +74,55 @@
     </ul>
   </nav>
 
-
   <section class="font-sans container m-auto text-center py-8" style="margin-top: 64px">
     <h1 class="mt-2 mb-4 font-medium ">Computer assisted story discovery</h1>
   </section>
 
-  <section
-    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center"
-    style="margin-top: 20px">
-    <div class="w-full lg:w-1/2">
+  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center" style="margin-top: 20px">
+    <div class="w-full lg:w-1/2" data-aos="fade-up">
       <img src="./assets/img/undraw_report.svg" alt="">
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-      <h1 class="my-4 font-normal">Tendências de dados para iniciar o seu artigo</h1>
+      <h1 class="my-4 font-normal">Data trends to start your article</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        Quando inicia o seu artigo, as tendências de dados são essenciais. Obterá as últimas tendências de pesquisa na
-        Internet,
-        a sua distribuição geográfica e as últimas notícias sobre o assunto que lhe interessa.
+        When you are starting your article, data trends are essential. You will get the latest internet search trends,
+        geographical
+        distribution of internet searches and latest news about the subject that interests you.
       </p>
     </div>
   </section>
 
-  <section
-    class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
+  <section class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">
-        Bloco de notas com idéias para experimentar títulos e para planear o seu artigo
+        Ideas notepad to experiment with headlines and plan your article
       </h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        Oferecemos informações atualizadas que o/a ajudam a decidir sobre um amplo espectro de oportunidades. Rápida e
-        confiável,
-        a moderna plataforma de jornalismo trendy dots compila os títulos dos meios de comunicação mais lidos no mundo
-        e
-        categoriza de acordo com suas configurações. Pode experimentar escrever os seus próprios títulos, afirmações e
-        planear
-        a sua estrutura de publicação juntamente com esses dados.
+        We offer up-to-date information which helps you decide about a broad spectrum of opportunities. Fast and
+        reliable, the trendy
+        dots data journalism platform compiles headlines from the most read media outlets in the world and categorizes
+        them
+        according to your settings. You can experiment with writing your own headlines, statements and plan your
+        publication
+        structure alongside this data.
       </p>
     </div>
-    <div class="w-full lg:w-1/2">
+    <div class="w-full lg:w-1/2" data-aos="fade-up">
       <img src="./assets/img/undraw_organize_resume.svg" alt="">
     </div>
   </section>
 
-  <section
-    class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2">
+  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+    <div class="w-full lg:w-1/2" data-aos="fade-up">
       <img src="./assets/img/undraw_in_sync.svg" alt="">
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-      <h1 class="my-4 font-normal">Esboços do seu artigo num só lugar. Elabore quantos quiser.</h1>
+      <h1 class="my-4 font-normal">Your article drafts in one place. Make as many as you want.</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        Uma maneira intuitiva e fácil de usar para se informar sobre as coisas importantes. Pode elaborar quantos
-        rascunhos de artigos
-        quiser. Pesquise facilmente os seus rascunhos, compare-os e escolha o melhor para a base da sua publicação.
+        An intuitive, easy to use way for getting informed about the things that matter. You get to make as many
+        article
+        drafts you want. Easily search through your drafts, compare them and choose the best one for your publication
+        foundation.
       </p>
     </div>
   </section>
@@ -140,22 +130,28 @@
 
   <section class="antialiased font-sans w-full bg-grey-lighter text-left text-black py-8" id="subscribe-section">
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal">
-      <h3 class="text-2xl">Junte-se à nossa viagem</h3>
+      <h3 class="text-2xl">Join our journey</h3>
       <p class="">
-        Como trabalhamos muito para alcançar uma plataforma de grande qualidade, precisamos da sua opinião
-        especializada. Inscrever-se nas notícias significa que receberá e-mails com o nosso progresso e pesquisas, onde
-        poderá oferecer o seu feedback. Será automaticamente inserido no programa de adoção inicial da plataforma e
-        terá a oportunidade de ser selecionado para a sessão de testes beta. </p>
-
+        As we are working hard to achieve a great quality platform, we need your expert opinion. Subscribing to the
+        news means you
+        will receive emails with our progress and surveys where you can offer feedback. You are automatically included
+        in
+        the early platform adopter program and have a chance to be selected for the beta testing session. </p>
       <!-- New form -->
-      <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8"
-        action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST">
+      <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf"
+        enctype="multipart/form-data" method="POST">
+        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
+            <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="firstname" name="firstname" type="text"
+              required style="height: 5em;">
+            <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="firstname" style="color: black;">
+              Your first name
+            </label>
+          </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
           <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="email" name="email" type="email"
             required style="height: 5em;">
-          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email"
-            style="color: black;">
-            Seu email
+          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email" style="color: black;">
+            Your email
           </label>
         </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
@@ -163,15 +159,15 @@
             type="text" required style="height: 5em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="affiliation"
             style="color: black;">
-            Sua afiliação
+            Your affiliation
           </label>
         </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
-          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="fieldRelation"
-            name="fieldRelation" type="text" style="height: 6em;">
+          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="fieldRelation" name="fieldRelation"
+            type="text" style="height: 6em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
             style="color: black;">
-            Como você está relacionado ao campo de jornalismo?
+            How are you related to the journalism field?
           </label>
         </div>
 
@@ -179,65 +175,72 @@
         <input type="hidden" name="comment" value="Subscribe me to trendy dots . data journalism">
         <br />
         <div class="flex items-center justify-between">
-          <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit"
-            style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
-            Inscreva-se
+          <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit" style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
+            Subscribe
           </button>
           <span style="font-size:12px">
-            ao enviar esta informação, você concorda com a nossa <a href="../../privacy-statement.html" target="_blank"
-              style="color:#000">declaração de privacidade</a>
-          </span>
+              by submitting this information you agree to our <a href="../privacy-statement.html" target="_blank" style="color:#000">privacy statement</a>
+              </span>
         </div>
       </form>
-
-      <!-- 
-      <div class="max-w-sm mt-4 sm:flex" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
+      <!--
+      <div class="max-w-sm mt-4 sm:flex" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">        
         <form id="invisible-recaptcha-form" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data"
           method="POST" class="form-style">
           <input type="email" class="block w-full focus:outline-0 bg-white py-3 px-6 mb-2 sm:mb-0" name="email"
             placeholder="Enter your email" required="">
           <input type="hidden" name="comment" value="Subscribe me to trendy dots . data journalism">
           <button type="submit" style="min-height: 30px;" class="g-recaptcha uppercase text-sm text-white focus:outline-0 w-full sm:w-auto bg-black hover:bg-grey-darkest focus:bg-grey-light tracking-wide px-6"
-            data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy" data-callback='onSubmit' data-badge="inline">Inscreva-se</button>
+            data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy" data-callback='onSubmit' data-badge="inline">Subscribe</button>
         </form>
       </div>
-    -->
+      -->
     </div>
   </section>
 
   <footer class="font-sans bg-white py-8 px-4">
-    <div
-      class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
+    <div class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
       <a href="" class="block mr-4 w-full md:w-1/4" target="_blank">
         <img src="./assets/img/logo.png" class="w-24 -ml-8 md:ml-0" alt="logo">
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
-        <h4 class="py-2 uppercase font-bold tracking-wide">Sobre nós</h4>
-        <p>Trendy Dots é um projeto ambicioso que efetua análise exploratória de dados e de tendências sobre
-          novos e antigos mercados. Modelamos o comportamento da Internet e prevemos a evolução de mercados, produtos,
-          empresas, etc., usando algoritmos de IA inovadores.</p>
+        <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
+        <p>Trendy Dots is an ambitious project making trend and exploratory data analysis on the new and old
+          markets. We
+          model the internet behaviour and forecast the evolution of markets, products, companies, etc. using
+          innovative
+          AI algorithms. </p>
       </div>
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
-        <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">Siga-nos</h4>
+        <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">Follow Us</h4>
         <div class="flex pl-0 md:pl-4 justify-start">
           <!-- 
         <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
         <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
        -->
-          <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank"
-            href="https://twitter.com/trendydots">
+          <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank" href="https://twitter.com/trendydots">
             <i class="fab fa-twitter"></i>
           </a>
         </div>
       </div>
     </div>
     <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 trendydots.com All
-      rights reserved. &nbsp;
-      <a href="../../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+      rights reserved. 
       &nbsp;
-      <a href="../../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a>
-    </div>
+      <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+      &nbsp;
+      <a href="../terms-of-service.html" target="_blank" style="color:#000">Terms of service</a></div>
   </footer>
+
+
+  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
+  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="./assets/js/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
