--- a/subscriber-thanks.html
+++ b/subscriber-thanks.html
@@ -155,7 +155,7 @@
     <div
       class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
       <a href="" class="block mr-4 w-full md:w-1/4" target="_blank">
-        <img src="./assets/img/logo.png" class="w-24 -ml-8 md:ml-0" alt="logo">
+        <img src="logo.png" class="w-24 -ml-8 md:ml-0" alt="logo">
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
         <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
