--- a/invest/project.html
+++ b/invest/project.html
@@ -106,8 +106,11 @@
         class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
         data-aos="fade-left"
       >
-        <h1 class="my-4 font-normal">Information empowers good decisions.</h1>
-        <p class="leading-normal mb-4 text-grey-dark">
+        <h1 class="my-4 font-normal text-grey-dark">
+          Information empowers good decisions.
+        </h1>
+        <br />
+        <p class="leading-normal mb-4 ">
           We offer an intuitive, easy to use way for getting informed about the
           things that matter. When you are investing in equity, getting news
           about the companies and products you own is essential.
@@ -123,11 +126,12 @@
         data-aos="fade-right"
         data-aos-delay="300"
       >
-        <h1 class="my-4 font-normal">
+        <h1 class="my-4 font-normal text-grey-dark">
           News insights into company shares, indices, Forex, commodities,
           cryptocurrencies and world events
         </h1>
-        <p class="leading-normal mb-4 text-grey-dark">
+        <br />
+        <p class="leading-normal mb-4">
           We offer up-to-date information which helps you decide about
           transactions on a broad spectrum of opportunities. Fast and reliable,
           the trendy dots investor news compiles headlines from the most read
