--- a/invest/project.html
+++ b/invest/project.html
@@ -106,7 +106,7 @@
         class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start"
         data-aos="fade-left"
       >
-        <h1 class="my-4 font-normal text-grey-dark">
+        <h1 class="my-4 font-normal text-grey-darker">
           Information empowers good decisions.
         </h1>
         <br />
@@ -126,7 +126,7 @@
         data-aos="fade-right"
         data-aos-delay="300"
       >
-        <h1 class="my-4 font-normal text-grey-dark">
+        <h1 class="my-4 font-normal text-grey-darker">
           News insights into company shares, indices, Forex, commodities,
           cryptocurrencies and world events
         </h1>
