--- a/invest/project.html
+++ b/invest/project.html
@@ -56,7 +56,7 @@
     >
       <span class="flex items-center">
         <a
-          href="https://trendydots.com"
+          href="https://trendydots.com/project"
           class="block text-left"
           target="_blank"
         >
