fixed ngo logos

--- a/data4good/index.html
+++ b/data4good/index.html
@@ -198,7 +198,7 @@
             target="_blank"
             style="text-decoration: none;"
           >
-            <img src="/img/ngo1.png" style="height: 60px" />
+            <img src="./img/ngo1.png" style="height: 60px" />
           </a>
         </label>
         <h1 class="my-4 font-normal">
@@ -239,7 +239,7 @@
             target="_blank"
             style="text-decoration: none;"
           >
-            <img src="/img/ngo2.png" style="height: 60px" /> </a
+            <img src="./img/ngo2.png" style="height: 60px" /> </a
         ></label>
         <h1 class="my-4 font-normal">
           Satellite imagery for emergency relief projects
@@ -290,7 +290,7 @@
             target="_blank"
             style="text-decoration: none;"
           >
-            <img src="/img/ngo3.png" style="height: 60px" /> </a
+            <img src="./img/ngo3.png" style="height: 60px" /> </a
         ></label>
         <h1 class="my-4 font-normal">Efficient 24-hour care services</h1>
         <p class="leading-normal mb-4 text-grey-dark">
@@ -330,7 +330,7 @@
             target="_blank"
             style="text-decoration: none;"
           >
-            <img src="/img/ngo4.png" style="height: 100px" /> </a
+            <img src="./img/ngo4.png" style="height: 100px" /> </a
         ></label>
         <h1 class="my-4 font-normal">Innovation in smart cities</h1>
         <p class="leading-normal mb-4 text-grey-dark">
