--- a/data4good/index.html
+++ b/data4good/index.html
@@ -82,6 +82,16 @@
       <div
         class="w-full md:w-1/2 flex flex-col md:flex-col sm:flex-col justify-between md:justify-center items-center px-2 md:p-8 items-center md:items-start"
       >
+        <span>
+          Organised by &nbsp; &nbsp;
+          <a
+            href="https://viennadatasciencegroup.at/"
+            target="_blank"
+            style="text-decoration: none;"
+          >
+            <img src="./img/organizer.png" alt="" style="height: 50px" />
+          </a>
+        </span>
         <span>&nbsp;</span>
         <img src="./img/twitter-hash.png" alt="" style="height: 80px" />
         <span>&nbsp;</span>
@@ -128,12 +138,31 @@
         <br />
         <p class=" justify-center">
           <b>Sponsored by</b> <br /><br />
-          <img src="./img/sponsor1.png" style="height: 60px" />
-          <img src="./img/sponsor2.png" style="height: 60px" />
+          <a
+            href="http://contextflow.com/de/"
+            target="_blank"
+            style="text-decoration: none;"
+          >
+            <img src="./img/sponsor1.png" style="height: 60px" />
+          </a>
+          &nbsp;&nbsp;
+          <a
+            href="https://www.enlite.ai/"
+            target="_blank"
+            style="text-decoration: none;"
+          >
+            <img src="./img/sponsor2.png" style="height: 60px" />
+          </a>
         </p>
         <p class=" justify-center">
           <b>Hoste by</b> <br /><br />
-          <img src="./img/sponsor3.png" style="height: 120px" />
+          <a
+            href="https://www.a1.group/"
+            target="_blank"
+            style="text-decoration: none;"
+          >
+            <img src="./img/sponsor3.png" style="height: 120px" />
+          </a>
         </p>
       </div>
       <div
