added social links

--- a/data4good/index.html
+++ b/data4good/index.html
@@ -485,21 +485,24 @@
           >
             Follow Us
           </h4>
-          <div class="flex pl-0 md:pl-4 justify-start">
+          <div class="flex pl-0 md:pl-4 justify-start text-3xl">
             <a
               class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline"
-              href="#"
-              ><i class="fab fa-github-alt"></i
+              href="https://www.meetup.com/de-DE/Vienna-Data-Science-Group-Meetup/"
+              target="_blank"
+              ><i class="fab fa-meetup"></i
             ></a>
             <a
               class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline"
-              href="#"
-              ><i class="fab fa-slack"></i
+              href="https://twitter.com/ViennaDSG"
+              target="_blank"
+              ><i class="fab fa-twitter"></i
             ></a>
             <a
               class="block flex items-center text-grey-darkest hover:text-black no-underline"
-              href="#"
-              ><i class="fab fa-twitter"></i
+              href="https://www.youtube.com/channel/UC6QK4pOaKBmPRwGCFLYklLA"
+              target="_blank"
+              ><i class="fab fa-youtube"></i
             ></a>
           </div>
         </div>
